wavelandDev/force-app/main/default/objects/TransactionTracker__c/TransactionTracker__c.object-meta.xml
<CustomObject>
    <label>Transaction Tracker</label>
    <nameField>
        <displayFormat>TT-{0000000000}</displayFormat>
        <label>Transaction Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>