wavelandDev/force-app/main/default/objects/TransactionTracker__c/fields/NumberOfPatients__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPatients__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Patients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>