wavelandDev/force-app/main/default/objects/TransactionTracker__c/fields/UserExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>UserExceptionMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>